--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="play_again">Play again?</string>
     <string name="reset">Reset Leaderboard</string>
     <string name="end">End</string>
-    <string name="out_of_time">You ran out of time! Press "Continue" to continue playing.</string>
-    <string name="rules">You will be given 15 questions and 10 seconds each to answer them. The questions have an initial point value of 1000 points, but the longer you take to answer them, the fewer points you will get. If you run out of time on a question, you receive 0 points for it, but can move on to the next question.</string>
+    <string name="out_of_time">You ran out of time! Press \"Continue\" to continue playing.</string>
+    <string name="rules">You will be given 10 questions and 20 seconds each to answer them. The questions have an initial point value of 1000 points, but the longer you take to answer them, the fewer points you will get. If you run out of time on a question, you receive 0 points for it, but can move on to the next question.</string>
 </resources>
